--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-remote_theme: hydecorp/hydejack
+remote_theme: hydecorp/hydejack # Changing theme
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 
