--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,23 @@ remote_theme: hydecorp/hydejack # Changing theme
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 
-title: [Tammy Hartline's E-Portfolio]
-description: [Portfolio to demonstrate my capabilities in various computer science techniques.]
+title: Tammy Hartline's STEM Leadership e-Portfolio
+description: 
+# Introduction
+Greetings! I'm Tammy Hartline, a dedicated Computer Science enthusiast with a specialization in Data Analytics. My academic journey has been a thrilling exploration of various facets within the realm of computer science. Initially drawn to STEM Project Management, I embarked on a path that not only refined my leadership and business skills but also provided me with real-world experiences.
+
+## Unveiling My Passion
+While pursuing my original concentration in STEM Project Management, I had the privilege of immersing myself in courses designed to enhance my leadership capabilities. However, it was during a hands-on role as a Project Manager in a real-world scenario that I made a significant revelation. Despite excelling and surpassing expectations in the project management domain, I realized that passion plays a pivotal role in career fulfillment.
+
+## Embracing Change
+Recognizing the importance of passion, I underwent a transformative shift. I redirected my focus towards areas that truly ignited my enthusiasm within the dynamic landscape of Computer Science. This change not only invigorated my professional journey but also allowed me to harness my skills in a way that aligns seamlessly with my genuine interests.
+
+## Areas of Expertise
+### 1. Data Analytics
+My specialization in Data Analytics has equipped me with the analytical prowess to derive valuable insights from complex datasets. From exploratory data analysis to predictive modeling, my skills in this domain empower me to make informed decisions driven by data.
+
+### 2. Leadership and Business Acumen
+My exposure to STEM Project Management has honed my leadership and business acumen. I've successfully navigated through project lifecycles, ensuring efficient collaboration, resource optimization, and timely delivery of results.
+
+### Looking Ahead
+As I present my STEM Leadership e-Portfolio, I invite you to delve into the projects, experiences, and skills that define my journey. Each step has been a purposeful stride towards a holistic understanding of Computer Science and effective leadership in the ever-evolving technological landscape.
