Commiting changes where I added the index.md file for the home page UI

--- a/_config.yml
+++ b/_config.yml
@@ -48,6 +48,9 @@ social:
   - title: Email
     url: mailto:tammyhartline@gmail.com
 
+#Include pages
+pages:
+  -index.md
 # Navigation
 main:
   - title: Home
