--- a/_config.yml
+++ b/_config.yml
@@ -48,7 +48,7 @@ social:
   - title: Email
     url: mailto:tammyhartline@gmail.com
 
-#Include pages
+#Include pages to be rendered as part of the site
 pages:
   -index.md
 # Navigation
