--- a/_config.yml
+++ b/_config.yml
@@ -1,26 +1,26 @@
-<<<<<<< HEAD
 # Author: Tammy Hartline
 # Date: 2024-02-25
 # Description: Configuration file for Jekyll site
 # Purpose: Set theme for portfolio site
 
-# Alembic Configuration
+# Minimal Configuration
 
 # Site settings
 title: "Tammy Hartline's Computer Science Portfolio"
 description: >
-  Welcome to my Portfolio Home Landing Page!\n\n
+  Welcome to my Portfolio Home Landing Page!
+  
   Hello there! I'm Tammy Hartline, a passionate Computer Science enthusiast specializing in Artificial Intelligence, Data Analytics, and STEM Project Management. With a background in STEM Project Management, I bring a unique blend of leadership, business acumen, and analytical skills to the table. Through my e-portfolio, I showcase my mastery of computer science topics, backed by academic, project, and professional experiences. I am also a mother to three amazing daughters, wife to my wonderful husband for 20 years, and have previous expertise in Business Administration, Banking and Finances, and US tax preparation. Join me on this journey of exploration and innovation in the ever-evolving tech landscape!
-baseurl: "/Home" # the subpath of the site page, e.g. /blog/
+baseurl: "/Home" # the subpath of your site, e.g. /blog/
 url: "https://tjhartline.github.io" # the base hostname & protocol for your site
 
 # Build settings
 markdown: kramdown
 
-theme: jekyll-theme-alembic
+remote-theme: pages-themes/minimal@v0.2.0
 
 plugins:
-  - jekyll-feed
+- jekyll-remote-theme
 
 # Permalinks
 permalink: /:categories/:title/ 
@@ -49,55 +49,27 @@ social:
   - title: Email
     url: mailto:tammyhartline@gmail.com
 
-#Include pages to be rendered as part of the site
-pages:
-  -index.md
+# Navigation
 # Navigation
 main:
   - title: Home
     url: /
-  - title: About Me
-    url: /about/
+  - title: Self Evaluation
+    url: /professional-self-evaluation.md/
   - title: Contact
     url: /contact/
-  - title: Resume
-    url: /resume/
+  - title: Career
+    url: /career/
   - title: Projects
     url: /projects/
   - title: Artifacts
     url: /artifacts/
-    children:
+    sublinks:
       - title: Software Design and Engineering
         url: /sdae/
       - title: Algorithms and Data Structures
-        url: /algorithms/
+        url: /ads/
+      - title: Computer Architecture
+        url: /ca/
       - title: Databases
-        url: /databases/
-=======
-remote_theme: hydecorp/hydejack # Changing theme
-plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
-
-title: Tammy Hartline's STEM Leadership e-Portfolio
-description: 
-"""
-# Introduction
-Greetings! I'm Tammy Hartline, a dedicated Computer Science enthusiast with a specialization in Data Analytics. My academic journey has been a thrilling exploration of various facets within the realm of computer science. Initially drawn to STEM Project Management, I embarked on a path that not only refined my leadership and business skills but also provided me with real-world experiences.
-
-## Unveiling My Passion
-While pursuing my original concentration in STEM Project Management, I had the privilege of immersing myself in courses designed to enhance my leadership capabilities. However, it was during a hands-on role as a Project Manager in a real-world scenario that I made a significant revelation. Despite excelling and surpassing expectations in the project management domain, I realized that passion plays a pivotal role in career fulfillment.
-
-## Embracing Change
-Recognizing the importance of passion, I underwent a transformative shift. I redirected my focus towards areas that truly ignited my enthusiasm within the dynamic landscape of Computer Science. This change not only invigorated my professional journey but also allowed me to harness my skills in a way that aligns seamlessly with my genuine interests.
-
-## Areas of Expertise
-### 1. Data Analytics
-My specialization in Data Analytics has equipped me with the analytical prowess to derive valuable insights from complex datasets. From exploratory data analysis to predictive modeling, my skills in this domain empower me to make informed decisions driven by data.
-
-### 2. Leadership and Business Acumen
-My exposure to STEM Project Management has honed my leadership and business acumen. I've successfully navigated through project lifecycles, ensuring efficient collaboration, resource optimization, and timely delivery of results.
-
-### Looking Ahead
-As I present my STEM Leadership e-Portfolio, I invite you to delve into the projects, experiences, and skills that define my journey. Each step has been a purposeful stride towards a holistic understanding of Computer Science and effective leadership in the ever-evolving technological landscape.
-"""
->>>>>>> 5f11cae92eb73f0a0b3f8ad146a9b069cd9d6612
+        url: /db/
