--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ url: "https://tjhartline.github.io" # the base hostname & protocol for your site
 # Build settings
 markdown: kramdown
 
-remote-theme: pages-themes/minimal@v0.2.0
+remote-theme: pages-themes/hacker
 
 plugins:
 - jekyll-remote-theme
