--- a/config.yml
+++ b/config.yml
@@ -63,5 +63,7 @@ main:
     url: ./reviews.md
   - title: Code Review 
     url: ./code-review.md
-
+  - title: Happy Birthday Michael!
+    url: ./happybirthday.html
       -
+ 
