--- a/_config.yml
+++ b/_config.yml
@@ -1,73 +1,11 @@
-# Author: Tammy Hartline
-# Date: 2024-02-25
-# Description: Configuration file for Jekyll site
-# Purpose: Set theme for portfolio site
-
-# Alembic Configuration
-
-# Site settings
-title: Tammy Hartline's Computer Science Portfolio
-description: >
-  Welcome to my Portfolio Home Landing Page!
+title: Portfolio Tammy Hartline # your name (or website title) here
+logo: "https://media.licdn.com/dms/image/D5603AQGil6vwByqc7g/profile-displayphoto-shrink_800_800/0/1695260208506?e=1721260800&v=beta&t=txt3Nl4Dbmil-2qhUp0Rv0HeATRYXOunV1W4QPhnjx8" # your photo (or logo) here
+description: > # your text below (remove <br> elements if you don't need line breaks)
+This Github Page will explain my experiences and lessons learned while earning my Bachelor's of Computer Science with a concentration in Data Analytics at SNHU.
+  <br><br>
+I will also briefly discuss what I was able to learn during my time as an SNHU Data Reporting Coordinator as a student worker, a software engineering leadership intern during the Girls Who Code Fall Leadership Academy Hosted by Raytheon(RTX), 
+and my current Project Management role at Scale AI.
+<br><br>
+  <a href="https://www.linkedin.com/in/tammy-hartline-91981266/">View My LinkedIn Profile</a> 
   
-  Hello there! I'm Tammy Hartline, a passionate Computer Science enthusiast specializing in Artificial Intelligence, Data Analytics, and STEM Project Management. With a background in STEM Project Management, I bring a unique blend of leadership, business acumen, and analytical skills to the table. Through my e-portfolio, I showcase my mastery of computer science topics, backed by academic, project, and professional experiences. I am also a mother to three amazing daughters, wife to my wonderful husband for 20 years, and have previous expertise in Business Administration, Banking and Finances, and US tax preparation. Join me on this journey of exploration and innovation in the ever-evolving tech landscape!
-baseurl: "/Home" # the subpath of your site, e.g. /blog/
-url: "https://tjhartline.github.io" # the base hostname & protocol for your site
-
-# Build settings
-markdown: kramdown
-
-remote-theme: pages-themes/dinky@v0.2.0
-plugins:
-- jekyll-remote-theme
-
-# Permalinks
-permalink: /:categories/:title/
-
-# Exclude from processing and display in RSS
-exclude:
-  - Gemfile
-  - Gemfile.lock
-  - README.md
-  - node_modules
-  - vendor
-  - _config.dev.yml
-  - .git
-  - .gitignore
-
-# Jekyll SEO Tag configuration
-seo:
-  # Add additional configurations for SEO
-
-# Social Media
-social:
-  - title: GitHub
-    url: https://github.com/tjhartline
-  - title: LinkedIn
-    url: https://www.linkedin.com/in/tammy-hartline-91981266/
-  - title: Email
-    url: mailto:tammyhartline@gmail.com
-
-# Navigation
-main:
-  - title: Home
-    url: /
-  - title: About Me
-    url: /about/
-  - title: Contact
-    url: /contact/
-  - title: Career
-    url: /career/
-  - title: Projects
-    url: /projects/
-  - title: Artifacts
-    url: /artifacts/
-    sublinks:
-      - title: Software Design and Engineering
-        url: /sdae/
-      - title: Algorithms and Data Structures
-        url: /ads/
-      - title: Computer Architecture
-        url: /ca/
-      - title: Databases
-        url: /db/
+theme: jekyll-theme-minimal
